# darwin_description

./: CMakeLists.txt  README.md  model.config  package.xml
urdf/: darwin.urdf
